--- a/Styles/index.css
+++ b/Styles/index.css
@@ -4,28 +4,104 @@ body {
     width: 100%;
 }
 
-.Part-1 {
-    display: flex;
-    padding: 30px;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    align-items: left;
-    justify-content: left;
-}
-
 .Logo {
     display: flex;
-    margin-left: 50px;
+    margin-left: 90px;
+    margin-top: 30px;
 }
 
 .Title {
     display: flex;
-    margin-left: 50px;
+    margin-left: 90px;
     margin-top: 96px;
+    font-family: 'Mulish', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 28px;
+    /* identical to box height */
+    letter-spacing: -0.423077px;
+    color: #4A4FF2;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .Main-info {
     display: flex;
+    font-family: 'Mulish', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 60px;
+    /* or 150% */
+    color: #111111;
+    margin-left: 90px;
+}
+
+.Quote {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    font-family: 'Mulish', sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 23px;
+    /* identical to box height */
+    color: #111111;
+    mix-blend-mode: normal;
+    opacity: 0.6;
+    margin-top: -75px;
+}
+
+.Image-1 {
+    display: flex;
+    margin-top: 144px;
+    margin-left: 90px;
+}
+
+.Part-2 {
+    display: flex;
+}
+
+.Info-2 {
+    font-family: 'Mulish', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 38px;
+    /* or 136% */
+    color: #111111;
+    margin-top: 80px;
+    margin-left: 90px;
+}
+
+.Service1 {
+    font-family: 'Mulish', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 23px;
+    /* identical to box height */
+    color: #111111;
+    mix-blend-mode: normal;
+    opacity: 0.6;
+    display: flex;
+    text-align: center;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
+.Service2 {
+    font-family: 'Mulish', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 23px;
+    /* identical to box height */
+    color: #111111;
+    mix-blend-mode: normal;
+    opacity: 0.6;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
